--- a/sprint2/public/css/home.css
+++ b/sprint2/public/css/home.css
@@ -15,6 +15,7 @@
   width: 30%;
 }
 
+
 .home p {
   font-size: 12px;
 }
@@ -53,6 +54,31 @@
 }
 
 
+.myButton {
+ display:inline-block;
+ background-color:#ffb8a1;
+  padding:0.3em 1.2em;
+  margin:0 0.1em 0.1em 0;
+  border:0.16em solid rgba(255,255,255,0);
+  border-radius:2em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  color:#000000;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  text-align:center;
+  transition: all 0.2s;
+}
+.myButton:hover {
+  border-color: rgb(200, 50, 50);
+}
+ 
+  
+ 
+
+        
+
 /*tablet*/
 @media (min-width: 361px) {
    
@@ -77,6 +103,10 @@
     margin-left: auto;
     margin-right: auto;
   }
+   .myButton {
+    display:block;
+    margin:0.2em auto;
+  }
  
 }
 
@@ -92,7 +122,10 @@
   color: white;
 margin-left: 30%;
 }
-
+.myButton {
+  display:block;
+margin: 25px 30px 10px   auto;
+ }
  
 *{
 
@@ -147,9 +180,7 @@ margin-left: 38%;
 }
 
 @media screen and (max-width: 800px) {
-	body {
-		padding: 40px 0;
-	}
+	
 
 	.contenido-principal {
 		flex-direction: column;
