--- a/sprint2/views/index.html
+++ b/sprint2/views/index.html
@@ -18,40 +18,33 @@
  
  <!---header-->
 
-    <header>
-        <div class="caja-superior"> 
-          
-            <div class="logoheader"> 
-            <img src="/img/Logo.png"  width="100%" alt="">
+ <header>
+    <div class="caja-superior">
+        <a href="/"><img src="/img/Logo.png" alt=""></a>
+        <div class="search" >
+            <input placeholder=" Buscar... " type="search">
+            <i class="fas fa-search"></i>
         </div>
-            <div class="search" >
-                <input placeholder=" Buscar... " type="search">
-                <i class="fas fa-search"></i>
-            </div>
-
-
-            <nav>
-                <ul class="navbar">
-                    <li><a href="/">Inicio</a></li>
-                    <li><a href="">Productos</a></li>
-                    <li><a href="">Preguntas frecuentes</a></li>
-                    <li><a href="">Contacto</a></li>
-                </ul>
-                <ul class="login-bar">
-                    <li><a href="/register"><i class="far fa-id-card"></i> Registrate </a>
-                        <li><a href="/login"><i class="fas fa-user-circle"></i> Iniciar sesión </a>
-                        <li><a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
-                </ul>
-            </nav>
+        <nav>
+            <ul class="navbar">
+                <li><a href="/">Inicio</a></li>
+                <li><a href="">Productos</a></li>
+                <li><a href="">Preguntas frecuentes</a></li>
+                <li><a href="">Contacto</a></li>
+            </ul>
+            <ul class="login-bar">
+                <li><a href="/register"><i class="far fa-id-card"></i> Registrate </a>
+                <li><a href="/login"><i class="fas fa-user-circle"></i> Iniciar sesión </a>
+                <li><a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
+            </ul>
+        </nav>
+    </div>
+    <div class="caja-inferior">
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>
         </div>
-        
-        <div class="caja-inferior">
-            <div class="burger-menu">
-                <i class="fas fa-bars"></i>
-            </div>
-        </div>
-    </header>
-
+    </div>
+</header>
 
      <!---header-->
 
@@ -89,11 +82,15 @@
             <article class="tazadona">
                 <img src="/img/tazadona.jpg" width="100%" alt="">
                 <div class="detail-product">
-                    <h4>Taza Dona</h4>
+                 
+                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
+                    <h4>Taza Dona </h4>
                     <div class="contenedor-precio-descuento">
-   
-                        <p class="precio">$1.770</p>
- 
+                  
+                        <p class="precio">$1.770 </p>
+                
+                        <a href="/productDetail" class="myButton">Ver Mas</a>
+                    
                     </div>
             
                 </div>
@@ -104,10 +101,12 @@
 
 
                 <div class="detail-product">
+                
+                        <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
                     <h4>Taza Llama</h4>
                     <div class="contenedor-precio-descuento">
                         <p class="precio">$2.000</p>
-      
+                        <a href="/productDetail" class="myButton">Ver Mas</a>
                     </div>
     
                 </div>
@@ -116,10 +115,12 @@
             <article>
                 <img src="/img/tazainodoro.jpg" width="100%" alt="">
                 <div class="detail-product">
+                    
+                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
                     <h4>Taza Inodoro</h4>
                     <div class="contenedor-precio-descuento">
                         <p class="precio">$1.500</p>
-  
+                        <a href="/productDetail" class="myButton">Ver Mas</a>
                     </div>
               
                 </div>
@@ -128,10 +129,14 @@
             <article>
                 <img src="/img/tazacubo.jpg" width="100%" alt="">
                 <div class="detail-product">
+                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
                     <h4>Taza Cubo</h4>
+                    
+                    
                     <div class="contenedor-precio-descuento">
 
                         <p class="precio">$2.200</p>
+                        <a href="/productDetail" class="myButton">Ver Mas</a>
                     </div>
                     
                 </div>
@@ -142,10 +147,13 @@
             <article>
                 <img src="/img/tazadona.jpg" width="100%" alt="">
                 <div class="detail-product">
+                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
                     <h4>Taza Dona</h4>
+                    
+                   
                     <div class="contenedor-precio-descuento">
                         <p class="precio">$1.770</p>
-          
+                        <a href="/productDetail" class="myButton">Ver Mas</a>
                     </div>
                   
                 </div>
@@ -154,10 +162,13 @@
             <article>
                 <img src="/img/tazallama.jpg" width="100%" alt="">
                 <div class="detail-product">
+                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
                     <h4>Taza Llama</h4>
+                    
+                    
                     <div class="contenedor-precio-descuento">
                         <p class="precio">$2.000</p>
-                   
+                        <a href="/productDetail" class="myButton">Ver Mas</a>
                     </div>
                   
                 </div>
@@ -166,10 +177,13 @@
             <article>
                 <img src="/img/tazainodoro.jpg" width="100%" alt="">
                 <div class="detail-product">
+                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
                     <h4>Taza Inodoro</h4>
+                    
+                    
                     <div class="contenedor-precio-descuento">
                         <p class="precio">$1.500</p>
-                   
+                        <a href="/productDetail" class="myButton">Ver Mas</a>
                     </div>
                    
                 </div>
@@ -178,10 +192,14 @@
             <article>
                 <img src="/img/tazacubo.jpg" width="100%" alt="">
                 <div class="detail-product">
+                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
                     <h4>Taza Cubo</h4>
+                    
+                   
                     <div class="contenedor-precio-descuento">
                         <p class="precio">$2.200</p>
-                
+                 
+                        <a href="/productDetail" class="myButton">Ver Mas</a>
                     </div>
                   
                 </div>
