--- a/sprint2/views/productDetail.html
+++ b/sprint2/views/productDetail.html
@@ -16,42 +16,33 @@
   
  
  <!---header-->
-
-    <header>
-        <div class="caja-superior"> 
-          
-            <div class="logoheader"> 
-            <img src="/img/Logo.png"  width="100%" alt="">
-        </div>
-            <div class="search" >
-                <input placeholder=" Buscar... " type="search">
-                <i class="fas fa-search"></i>
-            </div>
-
-
-            <nav>
-              <ul class="navbar">
-                <li><a href="/">Inicio</a></li>
-                <li><a href="">Productos</a></li>
-                <li><a href="">Preguntas frecuentes</a></li>
-                <li><a href="">Contacto</a></li>
-            </ul>
-            <ul class="login-bar">
-                <li><a href="/register"><i class="far fa-id-card"></i> Registrate </a>
-                <li><a href="/login"><i class="fas fa-user-circle"></i> Iniciar sesión </a>
-                <li><a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
-                </ul>
-            </nav>
-        </div>
-
-        
-        <div class="caja-inferior">
-            <div class="burger-menu">
-                <i class="fas fa-bars"></i>
-            </div>
-        </div>
-    </header>
-
+ <header>
+  <div class="caja-superior">
+      <a href="/"><img src="/img/Logo.png" alt=""></a>
+      <div class="search" >
+          <input placeholder=" Buscar... " type="search">
+          <i class="fas fa-search"></i>
+      </div>
+      <nav>
+          <ul class="navbar">
+              <li><a href="/">Inicio</a></li>
+              <li><a href="">Productos</a></li>
+              <li><a href="">Preguntas frecuentes</a></li>
+              <li><a href="">Contacto</a></li>
+          </ul>
+          <ul class="login-bar">
+              <li><a href="/register"><i class="far fa-id-card"></i> Registrate </a>
+              <li><a href="/login"><i class="fas fa-user-circle"></i> Iniciar sesión </a>
+              <li><a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
+          </ul>
+      </nav>
+  </div>
+  <div class="caja-inferior">
+      <div class="burger-menu">
+          <i class="fas fa-bars"></i>
+      </div>
+  </div>
+</header>
 
      <!---fin de header-->
     
