--- a/sitio/public/stylesheets/home.css
+++ b/sitio/public/stylesheets/home.css
@@ -234,6 +234,44 @@ margin-left: 30%;
  
 }
 
+/*formulario contacto*/
+.formulario{
+  background:rgba(0, 0, 0, 0.5);
+  margin: 25px 0px;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.8);
+  width: 350px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 2;
+}
+
+#video{
+  min-height: 100vh;
+  position: relative;
+}
+.home video{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 20%;
+  object-fit: cover;
+}
+.capa{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1d1c1c;
+  opacity: 0.5;
+  mix-blend-mode: overlay;
+}
+
 /*tablet*/
 @media (min-width: 768px) {
   .home h1{
@@ -339,5 +377,44 @@ margin-left: 38%;
     margin-left: 40%;
   }
   
+  .container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1100px;
+    margin: auto;
+}
+.box{
+    width: 300px;
+    height: 400px;
+    position: relative;
+    overflow: hidden;
+    margin: 20px;
+    border:3px solid #fff;
+}
+.box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.capa{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#fff;
+    transform: scale(0);
+    transition: .3s ease;
+}
+.box:hover .capa{
+    transform: scale(1);
+}
 
 }
