--- a/sitio/src/views/index.ejs
+++ b/sitio/src/views/index.ejs
@@ -33,6 +33,44 @@
 
                     <section>
 
+                        <div class="container">
+                            <div class="box">
+                                <a href="/products/category/<%= categories.id %>">
+                                    <img src="/img/portada-tazaFrase.jpg">
+                                    <div class="capa">
+                                        <h2>Tazas con frase</h2>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="box">
+                                <a href="#">
+                                    <img src="/img/portada-tazaCeramica.jpg">
+                                    <div class="capa">
+                                        <h2>Tazas de cerámica</h2>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="box">
+                                <a href="#">
+                                    <img src="/img/portada-azucarera.jpg">
+                                    <div class="capa">
+                                        <h2>Azucareras</h2>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="box">
+                                <a href="#">
+                                    <img src="/img/portada-teteras.jpg">
+                                    <div class="capa">
+                                        <h2>Tetera</h2>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
                         <h1>Ofertas</h1>
                         <% ofertas.forEach(product=>{ %>
                             <article class="product-card">
@@ -47,7 +85,7 @@
                                         <%= product.name %>
                                     </h4>
                                     <div class="contenedor-precio-descuento">
-                                         <% if (product.discount> 0) { %>
+                                        <% if (product.discount> 0) { %>
                                             <p class="precio">
                                                 <span class="precio">$<%= toThousand(product.price) %></span>
                                                 <br>
@@ -65,159 +103,58 @@
                             <% }) %>
 
 
-                            <h1>Tazas con frase</h1>
-                            <% products.forEach(product=>{ %>
-                                <% if (product.CategoryId === 1) { %>
-                                <article class="product-card">
-                                    <img src="/img/products/<%= product.image %>" width="100%" alt="">
-                                    <div class="detail-product">
-                                        <div class="box-botones">
-                                            <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
-                                            <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
-                                        </div>
-                                        <h4>
-                                            <%= product.name %>
-                                        </h4>
-                                        <div class="contenedor-precio-descuento">
-                                            <% if (product.discount> 0) { %>
-                                                <p class="precio">
-                                                    <span class="precio">$<%= toThousand(product.price) %></span>
-                                                    <br>
-                                                    <b>
-                                                        <%= product.discount %>% OFF
-                                                    </b>
-                                                </p>
-                                                <p class="precio-total">
-                                                   $<%= toDiscount(product.price, product.discount) %>
-                                                </p>
-                                                <% }else{%>
-                                                    <p class="precio-real">
-                                                       $<%= toThousand(product.price) %>
-                                                    </p>
-                                                    <% } %>
-                                        </div>
-                                    </div>
-                                </article>
-                                <% } %>
-                                <% }) %>
 
 
-                                <h1>Tazas de cerámica</h1>
-                                <% products.forEach(product=>{ %>
-                                    <% if (product.CategoryId === 2) { %>
-                                    <article class="product-card">
-                                        <img src="/img/products/<%= product.image %>" width="100%" alt="">
-                                        <div class="detail-product">
-                                            <div class="box-botones">
-                                                <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
-                                                <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
-                                            </div>
-                                            <h4>
-                                                <%= product.name %>
-                                            </h4>
-                                            <div class="contenedor-precio-descuento">
-                                                <% if (product.discount> 0) { %>
-                                                    <p class="precio">
-                                                        <span class="precio">$<%= toThousand(product.price) %></span>
-                                                        <br>
-                                                        <b>
-                                                            <%= product.discount %>% OFF
-                                                        </b>
-                                                    </p>
-                                                    <p class="precio-total">
-                                                       $<%= toDiscount(product.price, product.discount) %>
-                                                    </p>
-                                                    <% }else{%>
-                                                        <p class="precio-real">
-                                                           $<%= toThousand(product.price) %>
-                                                        </p>
-                                                        <% } %>
-                                            </div>
-                                        </div>
-                                    </article>
-                                    <% } %>
-                                    <% }) %>
-        
-
-                                    <h1>Teteras</h1>
-                                <% products.forEach(product=>{ %>
-                                    <% if (product.CategoryId === 3) { %>
-                                    <article class="product-card">
-                                        <img src="/img/products/<%= product.image %>" width="100%" alt="">
-                                        <div class="detail-product">
-                                            <div class="box-botones">
-                                                <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
-                                                <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
-                                            </div>
-                                            <h4>
-                                                <%= product.name %>
-                                            </h4>
-                                            <div class="contenedor-precio-descuento">
-                                                <% if (product.discount> 0) { %>
-                                                    <p class="precio">
-                                                        <span class="precio">$<%= toThousand(product.price) %></span>
-                                                        <br>
-                                                        <b></i>
-                                                            <%= product.discount %>% OFF
-                                                        </b>
-                                                    </p>
-                                                    <p class="precio-total">
-                                                       $<%= toDiscount(product.price, product.discount) %>
-                                                    </p>
-                                                    <% }else{%>
-                                                        <p class="precio-real">
-                                                           $<%= toThousand(product.price) %>
-                                                        </p>
-                                                        <% } %>
-                                            </div>
-                                        </div>
-                                    </article>
-                                    <% } %>
-                                    <% }) %>
-        
-
-                                    <h1>Azucareras</h1>
-                                <% products.forEach(product=>{ %>
-                                    <% if (product.CategoryId === 4) { %>
-                                    <article class="product-card">
-                                        <img src="/img/products/<%= product.image %>" width="100%" alt="">
-                                        <div class="detail-product">
-                                            <div class="box-botones">
-                                                <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
-                                                <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
-                                            </div>
-                                            <h4>
-                                                <%= product.name %>
-                                            </h4>
-                                            <div class="contenedor-precio-descuento">
-                                                <% if (product.discount> 0) { %>
-                                                    <p class="precio">
-                                                        <span class="precio">$<%= toThousand(product.price) %></span>
-                                                        <br>
-                                                        <b></i>
-                                                            <%= product.discount %>% OFF
-                                                        </b>
-                                                    </p>
-                                                    <p class="precio-total">
-                                                       $<%= toDiscount(product.price, product.discount) %>
-                                                    </p>
-                                                    <% }else{%>
-                                                        <p class="precio-real">
-                                                           $<%= toThousand(product.price) %>
-                                                        </p>
-                                                        <% } %>
-                                            </div>
-                                        </div>
-                                    </article>
-                                    <% } %>
-                                    <% }) %>
-
-                                
                                 <div class="botones">
                                     <button type="reset" id="reset"><a href="/products"> Ver más productos</a></button>
 
                                 </div>
                     </section>
+
+                    <section id="video">
+                        <div class="formulario">
+                            <h4>Perfil de usuario</h4>
+                            <form class="row" method="POST" enctype="multipart/form-data">
+
+                                <div class="nombre">
+                                    <label for="name" class="form-label">Nombre y apellido</label>
+                                    <input name="name" type="text" class="form-control" placeholder="Nombre y apellido"
+                                        id="name" value="">
+                                    <span class="text-danger small ms-2">
+                                        <%= locals.errors && errors.name ? errors.name.msg : null%>
+                                    </span>
+                                </div>
+
+                                <div class="email">
+                                    <label for="email" class="form-label">Email
+                                        address</label>
+                                    <input type="email" id="email" class="form-control" placeholder="name@example.com">
+                                    <span class="text-danger small ms-2">
+                                        <%= locals.errors && errors.name ? errors.name.msg : null%>
+                                    </span>
+                                </div>
+
+                                <div class="textarea">
+                                    <label for="mensaje" class="form-label">Mensaje</label>
+                                    <textarea class="form-control" id="mensaje" rows="3"></textarea>
+                                    <span class="text-danger small ms-2">
+                                        <%= locals.errors && errors.name ? errors.name.msg : null%>
+                                    </span>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <button type="submit" class="btn btn-dark">Enviar</button>
+                                </div>
+                            </form>
+                        </div>
+
+                        <div class="box-video">
+                            <video muted autoplay loop>
+                                <source src="/video/Tea.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="capa"></div>
+                    </section>
+
                 </main>
 
                 <%- include('partials/footer') %>
