--- a/sitio/src/views/profile.ejs
+++ b/sitio/src/views/profile.ejs
@@ -69,8 +69,11 @@
                                                 <% } %>
                                                 <span class="error-msg text-danger" id="error-file"></span> 
                                             </div>
-                                            <div class="col-12 col-md-6">
+                                            <div class="col-12 col-md-6 w-25">
                                                 <button type="submit" class="btn btn-dark">Guardar</button>
+                                            </div>
+                                            <div class="col-12 w-75">
+                                                <span id="error-empty" class="small text-danger"></span>
                                             </div>
                                         </form>
                                     </div>
