--- a/sitio/src/views/profile.ejs
+++ b/sitio/src/views/profile.ejs
@@ -17,7 +17,7 @@
                                 </div>
 
                                 <div class="card-body row justify-content-center">
-                                    <div class="col-10 col-md-4 " >
+                                    <div class="col-10 col-md-4 " id="img-preview" >
                                         <img class="img-fluid rounded-start" src="/img/users/<%= user.avatar %>" alt="">
                                         <span id="fileErrors"></span>
                                     </div>
