--- a/sitio/public/stylesheets/home.css
+++ b/sitio/public/stylesheets/home.css
@@ -333,6 +333,59 @@ margin-left: 30%;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.8);
 }
 
+
+/*categorias*/
+.home div.contenedor{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 10px;
+  background-color: white;
+}
+.home div h3{
+  font-size: 14px;
+  text-align: center;
+  color: var(--GrisMedio);
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+}
+.home div.category{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.home div.box{
+  width: 100px;
+  height: 80px;
+  position: relative;
+  overflow: hidden;
+  margin: 2px;
+  border-radius: 5px;
+}
+.home div.box img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.home div.capa{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(46,46,46,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color:#fff;
+}
+.home div.capa h2{
+  font-size: 12px;
+  text-align: center;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+}
+
 /*tablet*/
 @media (min-width: 768px) {
   .home h1{
@@ -426,6 +479,24 @@ margin-left: 30%;
   width: 300px;
  }
 
+
+ /*categoria*/
+ .home div h3{
+  font-size: 16px;
+  margin: 10px;
+}
+.home div.contenedor{
+  box-shadow: 0px 0px 10px rgb(100 100 100);
+}
+
+.home div.box {
+  width: 150px;
+  height: 100px;
+  margin: 10px;
+}
+.home div.capa h2{
+  font-size: 14px;
+}
 }
 
 
@@ -484,6 +555,28 @@ margin-left: 30%;
 }
 .texto {
   width: 380px;
+}
+
+
+/*categorias*/
+.home div h3{
+  font-size: 24px;
+}
+.home div.box {
+width: 200px;
+height: 150px;
+margin: 15px;
+}
+.home div.capa{
+  background: rgba(0,0,0,0.5);
+  transform: scale(0);
+  transition: .3s ease;
+}
+.home div.box:hover div.capa{
+  transform: scale(1);
+}
+.home div.capa h2 {
+font-size: 16px;
 }
 
 }
