--- a/sitio/src/views/categories.ejs
+++ b/sitio/src/views/categories.ejs
@@ -9,26 +9,6 @@
 
         <!---header-->
 
-        <!--carrousel-->
-        <div class="glider-contain">
-            <div class="glider">
-                <button aria-label="Previous" class="glider-prev">«</button>
-                <div><img src="/img/img-home-banner.jpg" alt=""></div>
-                <div><img src="/img/2.jpg" alt=""></div>
-                <div><img src="/img/1.jpg" alt=""></div>
-                <div><img src="/img/3.jpg" alt=""></div>
-                <div><img src="/img/4.jpg" alt=""></div>
-                <div><img src="/img/5.jpg" alt=""></div>
-                <button aria-label="Next" class="glider-next">»</button>
-                <div role="tablist" class="dots"></div>
-            </div>
-        </div>
-
-        <script src="javascripts/glider.js"> </script>
-        <script src="javascripts/home.js"></script>
-
-        <!--fin carrousel-->
-
         <body class="home">
             <main>
 
@@ -42,7 +22,6 @@
                                     <h2>"Tazas con frase"</h2>
                                 </div>
                             </a>
-
                         </div>
 
                         <div class="box">
@@ -72,12 +51,16 @@
                                 </div>
                             </a>
                         </div>
+
                     </div>
                 </div>
 
                 <section>
-                    <h1>Ofertas</h1>
-                    <% ofertas.forEach(product=>{ %>
+                    <h1>
+                        <%= category.name%>
+                    </h1>
+
+                    <% category.products.forEach(product=> { %>
                         <article class="product-card">
                             <img src="/img/products/<%= product.image %>" width="100%" alt="">
                             <div class="detail-product">
@@ -101,53 +84,18 @@
                                         <p class="precio-total">
                                             $<%= toDiscount(product.price, product.discount) %>
                                         </p>
-                                        <% } %>
+                                        <% }else{%>
+                                            <p class="precio-real">
+                                                $<%= toThousand(product.price) %>
+                                            </p>
+                                            <% } %>
                                 </div>
                             </div>
                         </article>
                         <% }) %>
 
-                            <div class="botones">
-                                <button type="reset" id="reset"><a href="/products"> Ver más productos</a></button>
-                            </div>
+
                 </section>
-
-                <section class="section-form" id="video">
-                    <div class="form-contact">
-                        <div class="texto">
-                            <h4 class="titulo">Contacto</h4>
-                            <p class="sub-titulo">Si tenés alguna consulta, o simplemente queres mandarnos un
-                                mensaje, ¡No dudes en hacerlo! Pronto te daremos una respuesta.</p>
-                        </div>
-                        <form class="form" action="https://formsubmit.co/horadelte21@gmail.com" method="POST">
-
-                            <div class="box-formulario">
-                                <label for="nombre">Nombre y apellido</label>
-                                <input type="text" id="nombre" name="name" placeholder="Tu nombre y apellido">
-                            </div>
-
-                            <div class="box-formulario">
-                                <label for="email">Email</label>
-                                <input type="email" id="email" name="email" placeholder="name@example.com">
-                            </div>
-
-                            <div class="box-formulario">
-                                <label for="msj">Mensaje</label>
-                                <textarea type="text" id="msj" name="msj" rows="3" placeholder="Tu mensaje"></textarea>
-                            </div>
-
-                            <div class="box-button">
-                                <button type="submit">Enviar</button>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="box-video">
-                        <video muted autoplay loop>
-                            <source src="/video/Tea.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                </section>
-
             </main>
 
             <%- include('partials/footer') %>
