--- a/sitio/src/views/profile.ejs
+++ b/sitio/src/views/profile.ejs
@@ -16,6 +16,19 @@
                                     <h4>Perfil de usuario</h4>
                                 </div>
 
+                                <script type="text/javascript">
+                                function cartel(passChange) {
+                                    if (passChange = true) {
+                                        Swal.fire(
+                                            'La contraseña se guardó',
+                                            'success'
+                                        )
+
+                                    }
+                                }
+                                    
+                                </script>
+
                                 <div class="card-body row justify-content-center">
                                     <div class="col-10 col-md-4 " >
                                         <img id="img-preview" class="img-fluid rounded-start" src="/img/users/<%= user.avatar %>" alt="">
@@ -90,7 +103,7 @@
                 </div>
                 
             </main>
-
+            <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
             <script src="/javascripts/validatorEditUser.js"></script>
 
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
