--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -58,5 +58,5 @@
             <i class="fas fa-bars"></i>
         </div>
     </div>
-    
+    <script src="/javascripts/search.js"></script>
 </header>
